@startuml

title __TOOL's Class Diagram__\n

  namespace neet.com.knowweather {
    namespace tool {
      class neet.com.knowweather.tool.GetLocation {
          - mLocationClient : LocationClient
          + GetLocation()
      }
    }
  }
  

  namespace neet.com.knowweather {
    namespace tool {
      class neet.com.knowweather.tool.GetWeather {
          {static} ~ getWeather()
      }
    }
  }
  

  namespace neet.com.knowweather {
    namespace tool {
      class neet.com.knowweather.tool.MyLocationListener {
          - city : String
          + getCity()
          + onReceiveLocation()
      }
    }
  }
  

  namespace neet.com.knowweather {
    namespace tool {
      class neet.com.knowweather.tool.SMSToll {
          {static} + CHECK_FAILE : int
          {static} + GET_SUCCESS : int
          {static} + SUBMIT_SUCCESS : int
          - mHander : Handler
          + SMSToll()
          + commint()
          + sendSmsCode()
          - initSMSSDK()
      }
    }
  }
  

  namespace neet.com.knowweather {
    namespace tool {
      class neet.com.knowweather.tool.VoiceToText {
          + onBeginOfSpeech()
          + onEndOfSpeech()
          + onError()
          + onEvent()
          + onResult()
          + onVolumeChanged()
      }
    }
  }
  

  neet.com.knowweather.tool.GetLocation o-- neet.com.knowweather.tool.MyLocationListener : myListener
  neet.com.knowweather.tool.MyLocationListener -up-|> com.baidu.location.BDAbstractLocationListener
  neet.com.knowweather.tool.VoiceToText .up.|> com.iflytek.cloud.RecognizerListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
